--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to My Web App</h1>
+  <h1>Bullpen</h1>
   <input type="text" id="nameInput" placeholder="Enter your name">
   <button id="greetBtn">Say Hello</button>
   <p id="greeting"></p>
