--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BULLPEn</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>BULLPEN</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Bullpen</h1>
-  <input type="text" id="nameInput" placeholder="Enter your name">
-  <button id="greetBtn">Say Hello</button>
-  <p id="greeting"></p>
+  <header>
+    <h1>Bullpen</h1>
+  </header>
+
+  <main>
+    <div class="greet-box">
+      <input type="text" id="nameInput" placeholder="Enter your name" />
+      <button id="greetBtn">Say Hello</button>
+      <p id="greeting"></p>
+    </div>
+  </main>
+
   <script src="script.js"></script>
 </body>
 </html>
