--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- Product Card -->
   <section class="card">
-    <h2>CALPINE 1</h2>
+    <h2>bullpen 1</h2>
     <p class="sub">দৈনিক আয় দৈনিক উত্তোলন</p>
     <img src="product.jpg" alt="Product" class="product-img">
     <p>মূল্য: BDT660 | দৈনিক: BDT132</p>
