--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- Header / Banner -->
   <header>
     <img src="banner.jpg" alt="Banner" class="banner">
@@ -15,36 +14,36 @@
 
   <!-- Menu Shortcuts -->
   <section class="shortcuts">
-    <div class="item">➕ রিচার্জ</div>
-    <div class="item">🎧 অনলাইন</div>
-    <div class="item">📍 চ্যানেল</div>
-    <div class="item">👥 দল</div>
-    <div class="item">💰 প্রত্যাহার</div>
+    <div class="item" id="download">⬇️ ডাউনলোড</div>
+    <div class="item" id="profile">🏢 কোম্পানি প্রোফাইল</div>
+    <div class="item" id="record">📄 অ্যাকাউন্ট রেকর্ড</div>
+    <div class="item" id="savings">💰 আমার সংগ্রহ</div>
+    <div class="item" id="bank">🏦 ব্যাংক এবং পাসওয়ার্ড</div>
   </section>
 
   <!-- Tabs -->
   <div class="tabs">
-    <button class="active">প্ল্যান A</button>
-    <button>প্ল্যান B</button>
-    <button>প্ল্যান C</button>
+    <button class="active" id="tab1">প্রথম</button>
+    <button id="tab2">দ্বিতীয়</button>
+    <button id="tab3">তৃতীয়</button>
   </div>
 
   <!-- Product Card -->
   <section class="card">
-    <h2>bullpen 1</h2>
-    <p class="sub">দৈনিক আয় দৈনিক উত্তোলন</p>
+    <h2>Bullpen 🏆</h2>
+    <p class="sub">দৈনিক উপার্জন</p>
     <img src="product.jpg" alt="Product" class="product-img">
-    <p>মূল্য: BDT660 | দৈনিক: BDT132</p>
-    <p>চক্র: 120 দিন | মোট: BDT15840</p>
+    <p>মূল্য: BDT 120</p>
+    <p>কোড: BDT15840</p>
     <button class="buy">Buy Now</button>
   </section>
 
   <!-- Bottom Navigation -->
   <nav class="bottom-nav">
-    <a href="#" class="active">🏠 হোম</a>
-    <a href="#">➕ আমন্ত্রণ</a>
-    <a href="#">👥 টিম</a>
-    <a href="#">👤 আমার</a>
+    <a href="#" class="active" id="home">🏠 হোম</a>
+    <a href="#" id="invite">➕ আমন্ত্রণ</a>
+    <a href="#" id="team">👥 টিম</a>
+    <a href="#" id="account">👤 আমার</a>
   </nav>
 
   <script src="script.js"></script>
