--- a/index.html
+++ b/index.html
@@ -13,42 +13,31 @@
     <h1>🐂 Bullpen App</h1>
   </div>
 
-  <!-- শর্টকাট বাটন -->
-  <div class="shortcuts">
-    <div class="item">⬇️ ডাউনলোড</div>
-    <div class="item">🏢 কোম্পানি প্রোফাইল</div>
-    <div class="item">📄 অ্যাকাউন্ট রেকর্ড</div>
-    <div class="item">💰 আমার কালেকশন</div>
-    <div class="item">🏦 ব্যাংক ও পাসওয়ার্ড</div>
-  </div>
-
-  <!-- ট্যাব -->
-  <div class="tabs">
-    <button data-tab="first" class="active">প্রথম</button>
-    <button data-tab="second">দ্বিতীয়</button>
-    <button data-tab="third">তৃতীয়</button>
-  </div>
-
-  <!-- ট্যাব কনটেন্ট -->
-  <div class="tab-content active" id="first">
-    <div class="card">
-      <h2>Bullpen 🏆</h2>
-      <p class="sub">ডেইলি আয়ের সুযোগ</p>
-      <img src="https://via.placeholder.com/200" alt="Product" class="product-img">
-      <p>Price: BDT 120</p>
-      <p>Code: BDT15840</p>
-      <button class="buy">কিনুন এখনি</button>
+  <!-- পেজ কনটেন্ট -->
+  <div id="pages">
+    <!-- হোম -->
+    <div class="page active" id="home">
+      <h2>🏠 হোম</h2>
+      <p>এখানে হোম পেজের কনটেন্ট দেখা যাবে।</p>
     </div>
-  </div>
 
-  <div class="tab-content" id="second">
-    <h2>দ্বিতীয় ট্যাব</h2>
-    <p>এখানে দ্বিতীয় ট্যাবের কনটেন্ট দেখা যাবে।</p>
-  </div>
+    <!-- আমন্ত্রণ -->
+    <div class="page" id="invite">
+      <h2>➕ আমন্ত্রণ</h2>
+      <p>এখানে ইনভাইট লিংক, রেফারেল কোড ইত্যাদি দেখানো যাবে।</p>
+    </div>
 
-  <div class="tab-content" id="third">
-    <h2>তৃতীয় ট্যাব</h2>
-    <p>এখানে তৃতীয় ট্যাবের কনটেন্ট দেখা যাবে।</p>
+    <!-- টিম -->
+    <div class="page" id="team">
+      <h2>👥 টিম</h2>
+      <p>এখানে টিম মেম্বারদের তথ্য দেখা যাবে।</p>
+    </div>
+
+    <!-- প্রোফাইল -->
+    <div class="page" id="my">
+      <h2>👤 আমার প্রোফাইল</h2>
+      <p>এখানে ইউজারের নাম, ব্যালেন্স, সেটিংস ইত্যাদি থাকবে।</p>
+    </div>
   </div>
 
   <!-- নিচের নেভিগেশন -->
