--- a/index.html
+++ b/index.html
@@ -15,37 +15,33 @@
 
   <!-- পেজ কনটেন্ট -->
   <div id="pages">
-    <!-- হোম -->
     <div class="page active" id="home">
-      <h2>🏠 হোম</h2>
-      <p>এখানে হোম পেজের কনটেন্ট দেখা যাবে।</p>
+      <h2>🏠 Home</h2>
+      <p>The content of the home page can be seen here.</p>
     </div>
 
-    <!-- আমন্ত্রণ -->
     <div class="page" id="invite">
-      <h2>➕ আমন্ত্রণ</h2>
-      <p>এখানে ইনভাইট লিংক, রেফারেল কোড ইত্যাদি দেখানো যাবে।</p>
+      <h2>➕ Invitation</h2>
+      <p>Here you can show invite links, referral codes, etc.</p>
     </div>
 
-    <!-- টিম -->
     <div class="page" id="team">
-      <h2>👥 টিম</h2>
-      <p>এখানে টিম মেম্বারদের তথ্য দেখা যাবে।</p>
+      <h2>👥 Team</h2>
+      <p>Here you can see information about team members.</p>
     </div>
 
-    <!-- প্রোফাইল -->
     <div class="page" id="my">
-      <h2>👤 আমার প্রোফাইল</h2>
-      <p>এখানে ইউজারের নাম, ব্যালেন্স, সেটিংস ইত্যাদি থাকবে।</p>
+      <h2>👤 My profile</h2>
+      <p>This will contain the user's name, balance, settings, etc.</p>
     </div>
   </div>
 
   <!-- নিচের নেভিগেশন -->
   <div class="bottom-nav">
-    <a href="#" class="active" data-page="home">🏠 হোম</a>
-    <a href="#" data-page="invite">➕ আমন্ত্রণ</a>
-    <a href="#" data-page="team">👥 টিম</a>
-    <a href="#" data-page="my">👤 প্রোফাইল</a>
+    <a href="#" class="active" data-page="home">🏠 Home</a>
+    <a href="#" data-page="invite">➕ Invitation</a>
+    <a href="#" data-page="team">👥 Team</a>
+    <a href="#" data-page="my">👤 Profile</a>
   </div>
 
   <script src="script.js"></script>
