--- a/index.html
+++ b/index.html
@@ -90,12 +90,22 @@
     </div>
 
     <!-- Deposit -->
-    <div class="page" id="deposit">
-      <h2>💰 Deposit</h2>
-      <p>👉 বিকাশ নাম্বার: <b>017XXXXXXXX</b></p>
-      <p>👉 নগদ নাম্বার: <b>018XXXXXXXX</b></p>
-      <button class="action-btn">Send Money</button>
-    </div>
+<div class="page" id="deposit">
+  <h2>💰 Deposit</h2>
+  <p>👉 বিকাশ নাম্বার: <b>01956715958</b></p>
+  <p>👉 নগদ নাম্বার: <b>01956715958</b></p>
+  
+  <label>টাকার পরিমাণ বেছে নিন:</label><br>
+  <select id="depositAmount">
+    <option value="">-- Select Amount --</option>
+    <option value="200">৳200</option>
+    <option value="300">৳300</option>
+    <option value="500">৳500</option>
+    <option value="1000">৳1000</option>
+  </select><br><br>
+  
+  <button class="action-btn" id="depositBtn">Deposit Now</button>
+</div>
 
     <!-- Profile -->
     <div class="page" id="profile">
